[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/InterfaceLayer/HUD/GameOver.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/InterfaceLayer/HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://res/assets/backgrounds/pixel-512x512.png" type="Texture" id=3]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="GameOver" parent="." instance=ExtResource( 1 )]

[node name="Menu" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Menu"]
modulate = Color( 0.815686, 0.12549, 0.12549, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -10.0
margin_right = 50.0
margin_bottom = 10.0
focus_mode = 1
custom_colors/font_color_disabled = Color( 0.972549, 0.964706, 0.960784, 1 )
custom_colors/font_color = Color( 0.972549, 0.780392, 0.780392, 1 )
custom_colors/font_color_hover = Color( 0.996078, 0.964706, 0.968627, 1 )
custom_colors/font_color_pressed = Color( 0.984314, 0.984314, 0.984314, 1 )
enabled_focus_mode = 1
keep_pressed_outside = true
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
anchor_right = 1.0
margin_top = 50.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.894118, 0.529412, 0.529412, 1 )
custom_colors/font_outline_modulate = Color( 0.8, 0.0862745, 0.0862745, 1 )
custom_colors/font_color_shadow = Color( 0.729412, 0.254902, 0.254902, 1 )
text = "The Summer Bullet"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="showMenu" from="GameOver" to="." method="_on_GameOver_showMenu"]
[connection signal="pressed" from="Menu/Button" to="." method="_on_Button_pressed"]
